--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,15 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="don_t_have_a_account">Don\'t have a account?</string>
     <string name="register">Register</string>
+    <string name="home">Home</string>
+    <string name="cart">Cart</string>
+    <string name="search">Search</string>
+    <string name="chat">Chat</string>
+    <string name="account">Account</string>
+    <string name="category1">Category 1</string>
+    <string name="category2">Category 2</string>
+    <string name="category3">Category 3</string>
+    <string name="category4">Category 4</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
