--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_with_guest_account">Login with guest account</string>
+    <string name="ikan_segar">Ikan Segar</string>
+    <string name="sayur_sayuran">Sayur-sayuran</string>
 </resources>
